--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "themes/m10c"]
-	path = themes/m10c
-	url = https://github.com/vaga/hugo-theme-m10c.git
+[submodule "themes/hugo-theme-fuji"]
+	path = themes/hugo-theme-fuji
+	url = https://github.com/dsrkafuu/hugo-theme-fuji
